Acrescentado link nova_pagina em index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
+<a href="nova_pagina.html">Nova Página</a>
 <p>Pagina inicial do projeto Web Storm</p>
 </body>
 </html>
